rust/zypp-agama/zypp-agama-sys/c-layer/include/lib.h

/// status struct to pass and obtain from calls that can fail.
/// After usage free with \ref free_status function.
///
/// Most functions act as *constructors* for this, taking a pointer
/// to it as an output parameter, disregarding the struct current contents
/// and filling it in. Thus, if you reuse a `Status` without \ref free_status
/// in between, `error` will leak.
struct Status {
  // lets use enum for future better distinguish
  enum STATE {
    STATE_SUCCEED,
    STATE_FAILED,
  } state;
  /// detailed user error what happens. Only defined when not succeed
  char *error; ///< owned
};
void free_status(struct Status *s) noexcept;
/// Opaque Zypp context
struct Zypp;
/// Progress reporting callback used by methods that takes longer.
/// @param text  text for user describing what is happening now
/// @param stage current stage number starting with 0
/// @param total count of stages. It should not change during single call of
/// method.
/// @param user_data is never touched by method and is used only to pass local
/// data for callback
/// @todo Do we want to support response for callback that allows early exit of
/// execution?
typedef void (*ProgressCallback)(const char *text, unsigned stage,
                                 unsigned total, void *user_data);
/// Represents a single mount point and its space usage.
/// The string pointers are not owned by this struct.
struct MountPoint {
  const char *directory;  ///< The path where the filesystem is mounted.
  const char *filesystem; ///< The filesystem type (e.g., "btrfs", "xfs").
  bool grow_only;
  long long
      used_size; ///< The used space in kilobytes. This is an output field.
};
enum RESOLVABLE_KIND {
  RESOLVABLE_PRODUCT,
  RESOLVABLE_PATCH,
  RESOLVABLE_PACKAGE,
  RESOLVABLE_SRCPACKAGE,
  RESOLVABLE_PATTERN,
};
enum RESOLVABLE_SELECTED {
  /// resolvable won't be installed
  NOT_SELECTED,
  /// dependency solver select resolvable
  /// match TransactByValue::SOLVER
  SOLVER_SELECTED,
  /// installation proposal selects resolvable
  /// match TransactByValue::APPL_{LOW,HIGH} we do not need both, so we use just
  /// one value
  APPLICATION_SELECTED,
  /// user select resolvable for installation
  /// match TransactByValue::USER
  USER_SELECTED,
  /// explicitly removed by user
  USER_REMOVED
};
/// Representation of zypp::Pattern.
/// https://doc.opensuse.org/projects/libzypp/HEAD/classzypp_1_1Pattern.html
struct Pattern {
  const char *name;        ///< owned
  const char *category;    ///< owned
  const char *icon;        ///< owned
  const char *description; ///< owned
  const char *summary;     ///< owned
  const char *order;       ///< owned
  const char *repo_alias;  ///< owned
  enum RESOLVABLE_SELECTED selected;
};