rust/zypp-agama/zypp-agama-sys/c-layer/include/callbacks.h

// keep in sync with below enum to ensure all entries here is also at the below
// one to allow 1:1 matching.
enum PROBLEM_RESPONSE { PROBLEM_RETRY, PROBLEM_ABORT, PROBLEM_IGNORE };
/**
 * @brief Callback to decide whether to accept an unknown GPG key.
 * @param key_id The ID of the GPG key.
 * @param key_name The name of the GPG key.
 * @param key_fingerprint The fingerprint of the GPG key.
 * @param repository_alias The alias of the repository providing the key. Can be
 * an empty string if not available.
 * @param user_data User-defined data.
 * @return A GPGKeyTrust value indicating the action to take.
 *  @see zypp::KeyRingReport::askUserToAcceptKey in
 * https://github.com/openSUSE/libzypp/blob/master/zypp-logic/zypp/KeyRing.h
 */
typedef enum GPGKeyTrust (*GPGAcceptKeyCallback)(const char *key_id,
                                                 const char *key_name,
                                                 const char *key_fingerprint,
                                                 const char *repository_alias,
                                                 void *user_data);
/**
 * @brief Callback for handling unsigned files.
 * @param file The path to the unsigned file.
 * @param repository_alias The alias of the repository. Can be an empty string
 * if not available.
 * @param user_data User-defined data.
 * @return true to continue, false to abort.
 */
typedef bool (*GPGUnsignedFile)(const char *file, const char *repository_alias,
                                void *user_data);
/**
 * @brief Callback for handling a file signed by an unknown key.
 * @param file The path to the file.
 * @param key_id The ID of the unknown GPG key.
 * @param repository_alias The alias of the repository. Can be an empty string
 * if not available.
 * @param user_data User-defined data.
 * @return true to continue, false to abort.
 */
typedef bool (*GPGUnknownKey)(const char *file, const char *key_id,
                              const char *repository_alias, void *user_data);
/**
 * @brief Callback for when GPG verification of a signed file fails.
 * @param file The path to the file.
 * @param key_id The ID of the GPG key.
 * @param key_name The name of the GPG key.
 * @param key_fingerprint The fingerprint of the GPG key.
 * @param repository_alias The alias of the repository. Can be an empty string
 * if not available.
 * @param user_data User-defined data.
 * @return true to continue, false to abort.
 */
typedef bool (*GPGVerificationFailed)(const char *file, const char *key_id,
                                      const char *key_name,
                                      const char *key_fingerprint,
                                      const char *repository_alias,
                                      void *user_data);
/**
 * @see zypp::DigestReport in
 * https://github.com/openSUSE/libzypp/blob/master/zypp-logic/zypp/Digest.h
 */
typedef bool (*ChecksumMissing)(const char *file, void *user_data);
typedef bool (*ChecksumWrong)(const char *file, const char *expected,
                              const char *actual, void *user_data);
typedef bool (*ChecksumUnknown)(const char *file, const char *checksum,
                                void *user_data);
/**
 * @brief Callbacks for handling security related issues.
 *
 * This struct provides callbacks for handling various security-related events
 * that can occur during libzypp operations, such as GPG key management and
 * checksum verification.
 *
 * Each callback has a corresponding `_data` pointer that can be used to pass
 * user-defined data to the callback function.
 */
struct SecurityCallbacks {
  /** @brief Callback to decide whether to accept an unknown GPG key. */
  GPGAcceptKeyCallback accept_key;
  /** @brief User data for the `accept_key` callback. */
  void *accept_key_data;
  /** @brief Callback for handling unsigned files. */
  GPGUnsignedFile unsigned_file;
  /** @brief User data for the `unsigned_file` callback. */
  void *unsigned_file_data;
  /** @brief Callback for handling files signed with an unknown key. */
  GPGUnknownKey unknown_key;
  /** @brief User data for the `unknown_key` callback. */
  void *unknown_key_data;
  /** @brief Callback for handling GPG verification failures. */
  GPGVerificationFailed verification_failed;
  /** @brief User data for the `verification_failed` callback. */
  void *verification_failed_data;
  /** @brief Callback for when a checksum is missing. */
  ChecksumMissing checksum_missing;
  /** @brief User data for the `checksum_missing` callback. */
  void *checksum_missing_data;
  /** @brief Callback for when a checksum is wrong. */
  ChecksumWrong checksum_wrong;
  /** @brief User data for the `checksum_wrong` callback. */
  void *checksum_wrong_data;
  /** @brief Callback for when the checksum type is unknown. */
  ChecksumUnknown checksum_unknown;
  /** @brief User data for the `checksum_unknown` callback. */
  void *checksum_unknown_data;
};
/**
 * @brief Errors that can occur during package installation.
 * @see zypp::target::rpm::InstallResolvableReport::Error in libzypp.
 */
enum ZyppInstallPackageError {
  /** @brief No error occurred. */
  PI_NO_ERROR,
  /** @brief The requested URL was not found. */
  PI_NOT_FOUND,
  /** @brief An I/O error occurred. */
  PI_IO,
  /** @brief The resolvable is invalid. */
  PI_INVALID
};
/**
 * @brief Callback invoked when the installation of a package starts.
 * @param package_name The name of the package being installed.
 * @param user_data User-defined data.
 */
typedef void (*ZyppInstallPackageStartCallback)(const char *package_name,
                                                void *user_data);
/**
 * @brief Callback for handling problems during package installation.
 * @param package_name The name of the package that has a problem.
 * @param error The type of error that occurred.
 * @param description A description of the problem.
 * @param user_data User-defined data.
 * @return A PROBLEM_RESPONSE value indicating how to proceed.
 */
typedef enum PROBLEM_RESPONSE (*ZyppInstallPackageProblemCallback)(
    const char *package_name, enum ZyppInstallPackageError error,
    const char *description, void *user_data);
/**
 * @brief Callback invoked when the installation of a package finishes.
 * @note We could add a finish message after package install, but YaST does not.
 * Should we do it with Agama?
 * @param user_data User-defined data.
 */
typedef void (*ZyppInstallPackageFinishCallback)(const char *package_name,
                                                 void *user_data);
/**
 * @brief Callback for handling problems in package installation scripts (e.g.,
 * post-install).
 * @param description A description of the script problem.
 * @param user_data User-defined data.
 * @return A PROBLEM_RESPONSE value indicating how to proceed.
 */
typedef enum PROBLEM_RESPONSE (*ZyppInstallScriptProblemCallback)(
    const char *description, void *user_data);
/**
 * @brief Callbacks for monitoring the progress of package installation.
 */
struct InstallCallbacks {
  ZyppInstallPackageStartCallback package_start;
  void *package_start_data;
  ZyppInstallPackageProblemCallback package_problem;
  void *package_problem_data;
  ZyppInstallScriptProblemCallback script_problem;
  void *script_problem_data;
  ZyppInstallPackageFinishCallback package_finish;
  void *package_finish_data;
};