rust/zypp-agama/zypp-agama-sys/src/bindings.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of SecurityCallbacks"][::std::mem::size_of::<SecurityCallbacks>() - 112usize];
    ["Alignment of SecurityCallbacks"][::std::mem::align_of::<SecurityCallbacks>() - 8usize];
    ["Offset of field: SecurityCallbacks::accept_key"]
        [::std::mem::offset_of!(SecurityCallbacks, accept_key) - 0usize];
    ["Offset of field: SecurityCallbacks::accept_key_data"]
        [::std::mem::offset_of!(SecurityCallbacks, accept_key_data) - 8usize];
    ["Offset of field: SecurityCallbacks::unsigned_file"]
        [::std::mem::offset_of!(SecurityCallbacks, unsigned_file) - 16usize];
    ["Offset of field: SecurityCallbacks::unsigned_file_data"]
        [::std::mem::offset_of!(SecurityCallbacks, unsigned_file_data) - 24usize];
    ["Offset of field: SecurityCallbacks::unknown_key"]
        [::std::mem::offset_of!(SecurityCallbacks, unknown_key) - 32usize];
    ["Offset of field: SecurityCallbacks::unknown_key_data"]
        [::std::mem::offset_of!(SecurityCallbacks, unknown_key_data) - 40usize];
    ["Offset of field: SecurityCallbacks::verification_failed"]
        [::std::mem::offset_of!(SecurityCallbacks, verification_failed) - 48usize];
    ["Offset of field: SecurityCallbacks::verification_failed_data"]
        [::std::mem::offset_of!(SecurityCallbacks, verification_failed_data) - 56usize];
    ["Offset of field: SecurityCallbacks::checksum_missing"]
        [::std::mem::offset_of!(SecurityCallbacks, checksum_missing) - 64usize];
    ["Offset of field: SecurityCallbacks::checksum_missing_data"]
        [::std::mem::offset_of!(SecurityCallbacks, checksum_missing_data) - 72usize];
    ["Offset of field: SecurityCallbacks::checksum_wrong"]
        [::std::mem::offset_of!(SecurityCallbacks, checksum_wrong) - 80usize];
    ["Offset of field: SecurityCallbacks::checksum_wrong_data"]
        [::std::mem::offset_of!(SecurityCallbacks, checksum_wrong_data) - 88usize];
    ["Offset of field: SecurityCallbacks::checksum_unknown"]
        [::std::mem::offset_of!(SecurityCallbacks, checksum_unknown) - 96usize];
    ["Offset of field: SecurityCallbacks::checksum_unknown_data"]
        [::std::mem::offset_of!(SecurityCallbacks, checksum_unknown_data) - 104usize];
};
#[doc = " @brief No error occurred."]
pub const ZyppInstallPackageError_PI_NO_ERROR: ZyppInstallPackageError = 0;
#[doc = " @brief The requested URL was not found."]
pub const ZyppInstallPackageError_PI_NOT_FOUND: ZyppInstallPackageError = 1;
#[doc = " @brief An I/O error occurred."]
pub const ZyppInstallPackageError_PI_IO: ZyppInstallPackageError = 2;
#[doc = " @brief The resolvable is invalid."]
pub const ZyppInstallPackageError_PI_INVALID: ZyppInstallPackageError = 3;
#[doc = " @brief Errors that can occur during package installation.\n @see zypp::target::rpm::InstallResolvableReport::Error in libzypp."]
pub type ZyppInstallPackageError = ::std::os::raw::c_uint;
#[doc = " @brief Callback invoked when the installation of a package starts.\n @param package_name The name of the package being installed.\n @param user_data User-defined data."]
pub type ZyppInstallPackageStartCallback = ::std::option::Option<
    unsafe extern "C" fn(
        package_name: *const ::std::os::raw::c_char,
        user_data: *mut ::std::os::raw::c_void,
    ),
>;
#[doc = " @brief Callback for handling problems during package installation.\n @param package_name The name of the package that has a problem.\n @param error The type of error that occurred.\n @param description A description of the problem.\n @param user_data User-defined data.\n @return A PROBLEM_RESPONSE value indicating how to proceed."]
pub type ZyppInstallPackageProblemCallback = ::std::option::Option<
    unsafe extern "C" fn(
        package_name: *const ::std::os::raw::c_char,
        error: ZyppInstallPackageError,
        description: *const ::std::os::raw::c_char,
        user_data: *mut ::std::os::raw::c_void,
    ) -> PROBLEM_RESPONSE,
>;
#[doc = " @brief Callback invoked when the installation of a package finishes.\n @note We could add a finish message after package install, but YaST does not.\n Should we do it with Agama?\n @param user_data User-defined data."]
pub type ZyppInstallPackageFinishCallback = ::std::option::Option<
    unsafe extern "C" fn(
        package_name: *const ::std::os::raw::c_char,
        user_data: *mut ::std::os::raw::c_void,
    ),
>;
#[doc = " @brief Callback for handling problems in package installation scripts (e.g.,\n post-install).\n @param description A description of the script problem.\n @param user_data User-defined data.\n @return A PROBLEM_RESPONSE value indicating how to proceed."]
pub type ZyppInstallScriptProblemCallback = ::std::option::Option<
    unsafe extern "C" fn(
        description: *const ::std::os::raw::c_char,
        user_data: *mut ::std::os::raw::c_void,
    ) -> PROBLEM_RESPONSE,
>;
#[doc = " @brief Callbacks for monitoring the progress of package installation."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct InstallCallbacks {
    pub package_start: ZyppInstallPackageStartCallback,
    pub package_start_data: *mut ::std::os::raw::c_void,
    pub package_problem: ZyppInstallPackageProblemCallback,
    pub package_problem_data: *mut ::std::os::raw::c_void,
    pub script_problem: ZyppInstallScriptProblemCallback,
    pub script_problem_data: *mut ::std::os::raw::c_void,
    pub package_finish: ZyppInstallPackageFinishCallback,
    pub package_finish_data: *mut ::std::os::raw::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of InstallCallbacks"][::std::mem::size_of::<InstallCallbacks>() - 64usize];
    ["Alignment of InstallCallbacks"][::std::mem::align_of::<InstallCallbacks>() - 8usize];
    ["Offset of field: InstallCallbacks::package_start"]
        [::std::mem::offset_of!(InstallCallbacks, package_start) - 0usize];
    ["Offset of field: InstallCallbacks::package_start_data"]
        [::std::mem::offset_of!(InstallCallbacks, package_start_data) - 8usize];
    ["Offset of field: InstallCallbacks::package_problem"]
        [::std::mem::offset_of!(InstallCallbacks, package_problem) - 16usize];
    ["Offset of field: InstallCallbacks::package_problem_data"]
        [::std::mem::offset_of!(InstallCallbacks, package_problem_data) - 24usize];
    ["Offset of field: InstallCallbacks::script_problem"]
        [::std::mem::offset_of!(InstallCallbacks, script_problem) - 32usize];
    ["Offset of field: InstallCallbacks::script_problem_data"]
        [::std::mem::offset_of!(InstallCallbacks, script_problem_data) - 40usize];
    ["Offset of field: InstallCallbacks::package_finish"]
        [::std::mem::offset_of!(InstallCallbacks, package_finish) - 48usize];
    ["Offset of field: InstallCallbacks::package_finish_data"]
        [::std::mem::offset_of!(InstallCallbacks, package_finish_data) - 56usize];
};
#[doc = " status struct to pass and obtain from calls that can fail.\n After usage free with \\ref free_status function.\n\n Most functions act as *constructors* for this, taking a pointer\n to it as an output parameter, disregarding the struct current contents\n and filling it in. Thus, if you reuse a `Status` without \\ref free_status\n in between, `error` will leak."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Status {
    pub state: Status_STATE,
    #[doc = "< owned"]
    pub error: *mut ::std::os::raw::c_char,
}
pub const Status_STATE_STATE_SUCCEED: Status_STATE = 0;
pub const Status_STATE_STATE_FAILED: Status_STATE = 1;
pub type Status_STATE = ::std::os::raw::c_uint;
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of Status"][::std::mem::size_of::<Status>() - 16usize];
    ["Alignment of Status"][::std::mem::align_of::<Status>() - 8usize];
    ["Offset of field: Status::state"][::std::mem::offset_of!(Status, state) - 0usize];
    ["Offset of field: Status::error"][::std::mem::offset_of!(Status, error) - 8usize];
};
#[doc = " Opaque Zypp context"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Zypp {
    _unused: [u8; 0],
}
#[doc = " Progress reporting callback used by methods that takes longer.\n @param text  text for user describing what is happening now\n @param stage current stage number starting with 0\n @param total count of stages. It should not change during single call of\n method.\n @param user_data is never touched by method and is used only to pass local\n data for callback\n @todo Do we want to support response for callback that allows early exit of\n execution?"]
pub type ProgressCallback = ::std::option::Option<
    unsafe extern "C" fn(
        text: *const ::std::os::raw::c_char,
        stage: ::std::os::raw::c_uint,
        total: ::std::os::raw::c_uint,
        user_data: *mut ::std::os::raw::c_void,
    ),
>;
#[doc = " Represents a single mount point and its space usage.\n The string pointers are not owned by this struct."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct MountPoint {
    #[doc = "< The path where the filesystem is mounted."]
    pub directory: *const ::std::os::raw::c_char,
    #[doc = "< The filesystem type (e.g., \"btrfs\", \"xfs\")."]
    pub filesystem: *const ::std::os::raw::c_char,
    pub grow_only: bool,
    #[doc = "< The used space in kilobytes. This is an output field."]
    pub used_size: ::std::os::raw::c_longlong,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of MountPoint"][::std::mem::size_of::<MountPoint>() - 32usize];
    ["Alignment of MountPoint"][::std::mem::align_of::<MountPoint>() - 8usize];
    ["Offset of field: MountPoint::directory"]
        [::std::mem::offset_of!(MountPoint, directory) - 0usize];
    ["Offset of field: MountPoint::filesystem"]
        [::std::mem::offset_of!(MountPoint, filesystem) - 8usize];
    ["Offset of field: MountPoint::grow_only"]
        [::std::mem::offset_of!(MountPoint, grow_only) - 16usize];
    ["Offset of field: MountPoint::used_size"]
        [::std::mem::offset_of!(MountPoint, used_size) - 24usize];
};
pub const RESOLVABLE_KIND_RESOLVABLE_PRODUCT: RESOLVABLE_KIND = 0;
pub const RESOLVABLE_KIND_RESOLVABLE_PATCH: RESOLVABLE_KIND = 1;
pub const RESOLVABLE_KIND_RESOLVABLE_PACKAGE: RESOLVABLE_KIND = 2;
pub const RESOLVABLE_KIND_RESOLVABLE_SRCPACKAGE: RESOLVABLE_KIND = 3;
pub const RESOLVABLE_KIND_RESOLVABLE_PATTERN: RESOLVABLE_KIND = 4;
pub type RESOLVABLE_KIND = ::std::os::raw::c_uint;
#[doc = " resolvable won't be installed"]
pub const RESOLVABLE_SELECTED_NOT_SELECTED: RESOLVABLE_SELECTED = 0;
#[doc = " dependency solver select resolvable\n match TransactByValue::SOLVER"]
pub const RESOLVABLE_SELECTED_SOLVER_SELECTED: RESOLVABLE_SELECTED = 1;
#[doc = " installation proposal selects resolvable\n match TransactByValue::APPL_{LOW,HIGH} we do not need both, so we use just\n one value"]
pub const RESOLVABLE_SELECTED_APPLICATION_SELECTED: RESOLVABLE_SELECTED = 2;
#[doc = " user select resolvable for installation\n match TransactByValue::USER"]
pub const RESOLVABLE_SELECTED_USER_SELECTED: RESOLVABLE_SELECTED = 3;
#[doc = " explicitly removed by user"]
pub const RESOLVABLE_SELECTED_USER_REMOVED: RESOLVABLE_SELECTED = 4;
pub type RESOLVABLE_SELECTED = ::std::os::raw::c_uint;
#[doc = " Representation of zypp::Pattern.\n https://doc.opensuse.org/projects/libzypp/HEAD/classzypp_1_1Pattern.html"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Pattern {
    #[doc = "< owned"]
    pub name: *const ::std::os::raw::c_char,
    #[doc = "< owned"]
    pub category: *const ::std::os::raw::c_char,
    #[doc = "< owned"]
    pub icon: *const ::std::os::raw::c_char,
    #[doc = "< owned"]
    pub description: *const ::std::os::raw::c_char,
    #[doc = "< owned"]
    pub summary: *const ::std::os::raw::c_char,
    #[doc = "< owned"]
    pub order: *const ::std::os::raw::c_char,
    #[doc = "< owned"]
    pub repo_alias: *const ::std::os::raw::c_char,
    pub selected: RESOLVABLE_SELECTED,
}
